--- a/notebook/context.ipynb
+++ b/notebook/context.ipynb
@@ -33,11 +33,11 @@
     "import pandas as pd\n",
     "\n",
     "sys.path.insert(0, '..')\n",
-    "from skew.fit_skew_t_pdf import fit_skew_t_pdf\n",
-    "from skew.fit_skew_t_pdfs import fit_skew_t_pdfs\n",
-    "from skew.compute_context import compute_context\n",
-    "from skew.make_context_matrix_and_summarize_context import *\n",
-    "from skew.plot_context import plot_context"
+    "from context.fit_skew_t_pdf import fit_skew_t_pdf\n",
+    "from context.fit_skew_t_pdfs import fit_skew_t_pdfs\n",
+    "from context.compute_context import compute_context\n",
+    "from context.make_context_matrix_and_summarize_context import *\n",
+    "from context.plot_context import plot_context"
    ]
   },
   {
